Ajuste na seção de informações sobre o projeto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bethany Bootstrap Theme</title>
+  <title>Computação Desplugada</title>
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -30,9 +30,9 @@
             </div>
             <div class="collapse navbar-collapse navbar-right" id="mynavbar">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#header">Home</a></li>
-                <li><a href="#feature">Feature</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li class="active"><a href="#header">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#portfolio">Oficina</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -48,31 +48,44 @@
     <div class="container">
       <div class="row">
         <div class="cta-info text-center">
-          <h3><span class="dec-tec">“</span>Everything is designed. Few things are designed well.<span class="dec-tec">”</span> -Brian Reed</h3>
+          <span class="dec-tec"></span><h2>Computação Desplugada:</h2>
+          <h3>Estimulando o Pensamento Lógico-Computacional de Estudantes de Escolas Públicas</h3><span class="dec-tec"></span>
         </div>
       </div>
     </div>
   </section>
   <!---->
   <!---->
-  <section id="feature" class="section-padding">
+  <section id="sobre" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="col-md-3 wow fadeInLeft delay-05s">
           <div class="section-title">
-            <h2 class="head-title">Features</h2>
+            <h2 class="head-title">Sobre</h2>
             <hr class="botm-line">
-            <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+            <p class="sec-para">O projeto propõe a articulação das áreas de computação e educação, fortalecendo a relação Universidade e Sociedade, e
+              promovendo a interdisciplinaridade.Nossa motivação do trabalho surge
+              do interesse em ofertar oficinas de Computação Desplugada, a fim
+              de favorecer o processo de ensino-aprendizagem colaborativo
+              fundamentado nos pilares da inclusão social e digital</p>
           </div>
         </div>
+        
         <div class="col-md-9">
           <div class="col-md-6 wow fadeInRight delay-02s">
             <div class="icon">
-              <i class="fa fa-paint-brush"></i>
+              <i class="fa fa-chevron-circle-right"></i>
             </div>
             <div class="icon-text">
-              <h3 class="txt-tl">Easy to Learn and Design</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+              <h3 class="txt-tl">Objetivo</h3>
+              <p class="txt-para"> Nosso objetivo consiste em abordar atividades educacionais lúdicas de
+                raciocínio lógico e tópicos fundamentais de Ciência da Computação
+                sem o uso de computadores, buscando estimular a resolução de
+                problemas, colaboração, pensamento analítico, tomada de decisão e
+                criatividade dos estudantes da educação básica dos ensinos
+                fundamental e médio da região metropolitana do Recife; e jovens
+                das comunidades do entorno do complexo industrial portuário de
+                Suape.
             </div>
           </div>
           <div class="col-md-6 wow fadeInRight delay-02s">
@@ -80,44 +93,16 @@
               <i class="fa fa-cogs"></i>
             </div>
             <div class="icon-text">
-              <h3 class="txt-tl">Bootstrap 3.3.2</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
-            <div class="icon">
-              <i class="fa fa-mobile"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Responsive Design</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
-            <div class="icon">
-              <i class="fa fa-desktop"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">No Coding, No Shortcodes</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
-            <div class="icon">
-              <i class="fa fa-lightbulb-o"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">High Coversion</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
-            <div class="icon">
-              <i class="fa fa-clock-o"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Save Tons of Time</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+              <h3 class="txt-tl">Metodologia</h3>
+              <p class="txt-para">A metodologia do projeto baseia-se no Toolkit Human
+                Centered Design, cujo foco da ação são as pessoas, tendo como
+                ciclo de desenvolvimento as fases Hear, Create e Deliver. A
+                metodologia também está respaldada no projeto “Computer Science
+                Unplugged”, que consiste em uma coleção de atividades didáticas
+                sobre fundamentos da computação, cuja abordagem independência
+                de recursos de hardware ou software. Assim, as atividades
+                desplugadas podem ser aplicadas em localidades remotas e/ou com
+                infraestruturas deficitárias.</p>
             </div>
           </div>
         </div>
@@ -176,88 +161,11 @@
   </section>
   <!---->
   <!---->
-  <section class="section-padding wow fadeInUp delay-05s" id="contact">
-    <div class="container">
-      <div class="row white">
-        <div class="col-md-8 col-sm-12">
-          <div class="section-title">
-            <h2 class="head-title black">Contact Us</h2>
-            <hr class="botm-line">
-            <p class="sec-para black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
-          </div>
-        </div>
-        <div class="col-md-12 col-sm-12">
-          <div class="col-md-4 col-sm-6" style="padding-left:0px;">
-            <h3 class="cont-title">Email Us</h3>
-            <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <div class="contact-info">
-              <form action="" method="post" role="form" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validation"></div>
-                </div>
-
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-                <button type="submit" class="btn btn-send">Send</button>
-              </form>
-            </div>
-
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <h3 class="cont-title">Visit Us</h3>
-            <div class="location-info">
-              <p class="white"><span aria-hidden="true" class="fa fa-map-marker"></span>Via Principe Amedeo 9, Torino, Italy</p>
-              <p class="white"><span aria-hidden="true" class="fa fa-phone"></span>Phone: 0039 333 12 68 347</p>
-              <p class="white"><span aria-hidden="true" class="fa fa-envelope"></span>Email: <a href="" class="link-dec">hi@yourdomain.com</a></p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="contact-icon-container hidden-md hidden-sm hidden-xs">
-              <span aria-hidden="true" class="fa fa-envelope-o"></span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!---->
-  <!---->
   <footer class="" id="footer">
     <div class="container">
       <div class="row">
         <div class="col-sm-7 footer-copyright">
-          © Bethany Theme - All rights reserved
-          <div class="credits">
-            <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bethany
-            -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
-        </div>
-        <div class="col-sm-5 footer-social">
-          <div class="pull-right hidden-xs hidden-sm">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-pinterest"></i></a>
-          </div>
+        
         </div>
       </div>
     </div>
