Alteração na descrição da página

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Computação Desplugada</title>
-  <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
-  <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+  <meta name="description" content="Projeto de computação desplugada">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -119,9 +118,21 @@
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <div class="section-title">
-            <h2 class="head-title">Portfolio</h2>
+            <h2 class="head-title">Oficinas</h2>
             <hr class="botm-line">
-            <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+            <br>
+            <br>
+            <input type="radio" name="bt" id="bt_todos">
+            <label for="bt_todos">Todos</label>
+            <br>
+            <input type="radio" name="bt" id="bt_pedro_augusto">
+            <label for="bt_pedro_augusto">Escola Pedro Augusto</label>
+            <br>
+            <input type="radio" name="bt" id="bt_tatuoca">
+            <label for="bt_tatuoca">Tatuoca</label>
+            <br>
+            <input type="radio" name="bt" id="bt_pedro_augusto">
+            <label for="bt_codai">Codai</label>
           </div>
         </div>
         <div class="col-md-9 col-sm-12">
