Adição de imagens de oficinas

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <hr class="botm-line">
             <br>
             <br>
-            <input type="radio" name="bt" id="bt_todos">
+            <input type="radio" name="bt" id="bt_todos" checked>
             <label for="bt_todos">Todos</label>
             <br>
             <input type="radio" name="bt" id="bt_pedro_augusto">
@@ -131,39 +131,49 @@
             <input type="radio" name="bt" id="bt_tatuoca">
             <label for="bt_tatuoca">Tatuoca</label>
             <br>
-            <input type="radio" name="bt" id="bt_pedro_augusto">
+            <input type="radio" name="bt" id="bt_codai">
             <label for="bt_codai">Codai</label>
           </div>
         </div>
-        <div class="col-md-9 col-sm-12">
+        <div class="col-md-9 col-sm-12" id="galeria">
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port01.jpg" alt="" class="img-responsive">
+              <img src="img/codai/Codai_01.jpeg" alt="Imagem não encontrada" class="img-responsive codai">
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port02.jpg" alt="" class="img-responsive">
+              <img src="img/codai/Codai_02.jpeg" alt="Imagem não encontrada" class="img-responsive codai" >
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port03.jpg" alt="" class="img-responsive">
+              <img src="img/codai/Codai_03.jpeg" alt="Imagem não encontrada" class="img-responsive codai" >
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port04.jpg" alt="" class="img-responsive">
+              <img src="img/pedro_augusto/Pedro_Augusto_01.jpg" alt="Imagem não encontrada" class="img-responsive pedro-augusto">
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port05.jpg" alt="" class="img-responsive">
+              <img src="img/pedro_augusto/Pedro_Augusto_02.jpg" alt="Imagem não encontrada" class="img-responsive pedro-augusto">
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <img src="img/port06.jpg" alt="" class="img-responsive">
+              <img src="img/tatuoca/Tatuoca_imersao_01.1.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <img src="img/tatuoca/Tatuoca_imersao_01.2.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <img src="img/tatuoca/Tatuoca_imersao_01.3.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
             </div>
           </div>
         </div>
