--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#header">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#portfolio">Oficina</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#portfolio">Oficinas</a></li>
               </ul>
             </div>
           </div>
@@ -122,61 +121,61 @@
             <hr class="botm-line">
             <br>
             <br>
-            <input type="radio" name="bt" id="bt_todos" checked>
-            <label for="bt_todos">Todos</label>
-            <br>
-            <input type="radio" name="bt" id="bt_pedro_augusto">
-            <label for="bt_pedro_augusto">Escola Pedro Augusto</label>
-            <br>
-            <input type="radio" name="bt" id="bt_tatuoca">
-            <label for="bt_tatuoca">Tatuoca</label>
-            <br>
-            <input type="radio" name="bt" id="bt_codai">
-            <label for="bt_codai">Codai</label>
-          </div>
-        </div>
-        <div class="col-md-9 col-sm-12" id="galeria">
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/codai/Codai_01.jpeg" alt="Imagem não encontrada" class="img-responsive codai">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/codai/Codai_02.jpeg" alt="Imagem não encontrada" class="img-responsive codai" >
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/codai/Codai_03.jpeg" alt="Imagem não encontrada" class="img-responsive codai" >
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/pedro_augusto/Pedro_Augusto_01.jpg" alt="Imagem não encontrada" class="img-responsive pedro-augusto">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/pedro_augusto/Pedro_Augusto_02.jpg" alt="Imagem não encontrada" class="img-responsive pedro-augusto">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/tatuoca/Tatuoca_imersao_01.1.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/tatuoca/Tatuoca_imersao_01.2.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <img src="img/tatuoca/Tatuoca_imersao_01.3.jpg" alt="Imagem não encontrada" class="img-responsive tatuoca-01">
+            <div class="menu">
+                <ul>
+                  <li class="todos active"><a href="javascript:void(0)" class="btn_menu" data-filtro="todos">Todos</a></li>
+                  <li class="pedro_augusto"><a href="javascript:void(0)" class="btn_menu" data-filtro="pedro_augusto">Escola Pedro Augusto</a></li>
+                  <li class="tatuoca-01"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-01">Tatuoca</a></li>
+                  <li class="codai"><a href="javascript:void(0)" class="btn_menu" data-filtro="codai">CODAI</a></li>
+                </ul>
             </div>
           </div>
         </div>
+        <div class="galeria">
+            <div class="col-md-9 col-sm-12" >
+                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                  <div class="portfolio-box design">
+                    <img src="img/codai/Codai_01.jpeg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                  <div class="portfolio-box design">
+                    <img src="img/codai/Codai_02.jpeg" alt="Imagem não encontrada" class="img-responsive" >
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                  <div class="portfolio-box design">
+                    <img src="img/codai/Codai_03.jpeg" alt="Imagem não encontrada" class="img-responsive" >
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
+                  <div class="portfolio-box design">
+                    <img src="img/pedro_augusto/Pedro_Augusto_01.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
+                  <div class="portfolio-box design">
+                    <img src="img/pedro_augusto/Pedro_Augusto_02.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.1.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.2.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.3.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+              </div>
+        </div>
+        
       </div>
     </div>
   </section>
@@ -199,6 +198,7 @@
   <script src="js/wow.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
+  <script src="js/filtro.js"></script>
 
 </body>
 </html>
