Ajuste formato imagens em JPG

--- a/index.html
+++ b/index.html
@@ -150,27 +150,27 @@
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
                   <div class="portfolio-box design">
-                    <img src="img/pedro_augusto/Pedro_Augusto_01.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/pedro_augusto/Pedro_Augusto_01.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
                   <div class="portfolio-box design">
-                    <img src="img/pedro_augusto/Pedro_Augusto_02.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/pedro_augusto/Pedro_Augusto_02.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
                   <div class="portfolio-box design">
-                    <img src="img/tatuoca/Tatuoca_imersao_01.1.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.1.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
                   <div class="portfolio-box design">
-                    <img src="img/tatuoca/Tatuoca_imersao_01.2.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.2.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
                   <div class="portfolio-box design">
-                    <img src="img/tatuoca/Tatuoca_imersao_01.3.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/tatuoca/Tatuoca_imersao_01.3.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
               </div>
