--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="section-title">
             <h2 class="head-title">Sobre</h2>
             <hr class="botm-line">
-            <p class="sec-para">O projeto propõe a articulação das áreas de computação e educação, fortalecendo a relação Universidade e Sociedade, e
+            <p class="sec-para"  align="justify">O projeto propõe a articulação das áreas de computação e educação, fortalecendo a relação Universidade e Sociedade, e
               promovendo a interdisciplinaridade.Nossa motivação do trabalho surge
               do interesse em ofertar oficinas de Computação Desplugada, a fim
               de favorecer o processo de ensino-aprendizagem colaborativo
@@ -74,7 +74,7 @@
             <div class="icon">
               <i class="fa fa-chevron-circle-right"></i>
             </div>
-            <div class="icon-text">
+            <div class="icon-text"  align="justify">
               <h3 class="txt-tl">Objetivo</h3>
               <p class="txt-para"> Nosso objetivo consiste em abordar atividades educacionais lúdicas de
                 raciocínio lógico e tópicos fundamentais de Ciência da Computação
@@ -90,7 +90,7 @@
             <div class="icon">
               <i class="fa fa-cogs"></i>
             </div>
-            <div class="icon-text">
+            <div class="icon-text"  align="justify">
               <h3 class="txt-tl">Metodologia</h3>
               <p class="txt-para">A metodologia do projeto baseia-se no Toolkit Human
                 Centered Design, cujo foco da ação são as pessoas, tendo como
@@ -111,7 +111,40 @@
   <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
   </section>
   <!---->
+   <!--/ contador-->
+   <div id="about-bg">
+
+		<div class="container">
+			<div class="row">
+        <div class="teste">
+          <div class=" col-xs-12 col-md-4">
+            <div class="about-bg-wrapper">
+              <span class="count"><h1><span class="border">365</span></h1>
+              </span>
+              <p>Alunos presentes</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="about-bg-wrapper">
+              <span class="count"><h1>7</h1></span>
+              <p>escolas visitadas</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="about-bg-wrapper">
+              <span class="count"><h1>3</h1></span>
+              <p>imersões em Tatuoca</p>
+            </div>
+          </div>
+        </div>
+			</div>
+		</div>
+
+		<div class="cover"></div>
+
+	</div>
   <!---->
+
   <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
     <div class="container">
       <div class="row">
@@ -195,6 +228,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery.easing.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
