Ajuste no menu da galeria e adição de fotos

--- a/index.html
+++ b/index.html
@@ -150,62 +150,121 @@
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <div class="section-title">
-            <h2 class="head-title">Oficinas</h2>
+            <h2 class="head-title">Oficinas e Imersões</h2>
             <hr class="botm-line">
             <br>
             <br>
             <div class="menu">
                 <ul>
                   <li class="todos active"><a href="javascript:void(0)" class="btn_menu" data-filtro="todos">Todos</a></li>
-                  <li class="pedro_augusto"><a href="javascript:void(0)" class="btn_menu" data-filtro="pedro_augusto">Escola Pedro Augusto</a></li>
-                  <li class="tatuoca-01"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-01">Tatuoca</a></li>
-                  <li class="codai"><a href="javascript:void(0)" class="btn_menu" data-filtro="codai">CODAI</a></li>
+                  <li class="coronel-othon"><a href="javascript:void(0)" class="btn_menu" data-filtro="coronel-othon">Coronel Othon - Abril 2017</a></li>
+                  <li class="saturnino-brito"><a href="javascript:void(0)" class="btn_menu" data-filtro="saturnino-brito">Saturnino de Brito - Maio 2017</a></li>
+                  <li class="conego-rochael"><a href="javascript:void(0)" class="btn_menu" data-filtro="conego-rochael">Cônego Rochael de Medeiros - Agosto 2017</a></li>
+                  <li class="ginasio-pernambucano"><a href="javascript:void(0)" class="btn_menu" data-filtro="ginasio-pernambucano">Ginásio Pernambucano - outubro 2017</a></li>
+                  <li class="pedro_augusto"><a href="javascript:void(0)" class="btn_menu" data-filtro="pedro_augusto">Pedro Augusto - Junho 2018</a></li>
+                  <li class="codai"><a href="javascript:void(0)" class="btn_menu" data-filtro="codai">CODAI - Julho 2018</a></li>
+                  <li class="tatuoca-01"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-01">Tatuoca - Março 2017</a></li>
+                  <li class="tatuoca-02"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-02">Tatuoca - Junho 2017</a></li>
+                  <li class="tatuoca-03"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-03">Tatuoca - Novembro 2017</a></li>
+                  <li class="tatuoca-04"><a href="javascript:void(0)" class="btn_menu" data-filtro="tatuoca-04">Tatuoca - Abril 2018</a></li>
+                  
                 </ul>
             </div>
           </div>
         </div>
         <div class="galeria">
             <div class="col-md-9 col-sm-12" >
-                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                <div class="col-md-4 col-sm-6 padding-right-zero codai escola">
                   <div class="portfolio-box design">
                     <img src="img/codai/Codai_01.jpeg" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                <div class="col-md-4 col-sm-6 padding-right-zero codai escola">
                   <div class="portfolio-box design">
                     <img src="img/codai/Codai_02.jpeg" alt="Imagem não encontrada" class="img-responsive" >
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero codai">
+                <div class="col-md-4 col-sm-6 padding-right-zero codai escola">
                   <div class="portfolio-box design">
                     <img src="img/codai/Codai_03.jpeg" alt="Imagem não encontrada" class="img-responsive" >
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
+                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto escola">
                   <div class="portfolio-box design">
                     <img src="img/pedro_augusto/Pedro_Augusto_01.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto">
+                <div class="col-md-4 col-sm-6 padding-right-zero pedro_augusto escola">
                   <div class="portfolio-box design">
                     <img src="img/pedro_augusto/Pedro_Augusto_02.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-04 escola">
                   <div class="portfolio-box design">
                     <img src="img/tatuoca/Tatuoca_imersao_01.1.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-04 escola">
                   <div class="portfolio-box design">
                     <img src="img/tatuoca/Tatuoca_imersao_01.2.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
-                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01">
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-04 escola">
                   <div class="portfolio-box design">
                     <img src="img/tatuoca/Tatuoca_imersao_01.3.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01 escola">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_1.1.JPG" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01 escola">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_1.2.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01 escola">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_1.3.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero tatuoca-01 escola">
+                  <div class="portfolio-box design">
+                    <img src="img/tatuoca/Tatuoca_1.5.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
+                  <div class="portfolio-box design">
+                    <img src="img/coronel_othon/Coronel_Othon_01.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
+                  <div class="portfolio-box design">
+                    <img src="img/coronel_othon/Coronel_Othon_02.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
+                  <div class="portfolio-box design">
+                    <img src="img/coronel_othon/Coronel_Othon_03.jpg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero saturnino-brito escola">
+                  <div class="portfolio-box design">
+                    <img src="img/saturnino/Escola_Saturnino_01.jpeg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero saturnino-brito escola">
+                  <div class="portfolio-box design">
+                    <img src="img/saturnino/Escola_Saturnino_02.jpeg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 padding-right-zero saturnino-brito escola">
+                  <div class="portfolio-box design">
+                    <img src="img/saturnino/Escola_Saturnino_03.jpeg" alt="Imagem não encontrada" class="img-responsive">
+                  </div>
+                </div>
+
               </div>
         </div>
         
