--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
                   <div class="portfolio-box design">
-                    <img src="img/coronel_othon/Coronel_Othon_01.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/coronel_othon/Coronel_Othon_01.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
                   <div class="portfolio-box design">
-                    <img src="img/coronel_othon/Coronel_Othon_02.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/coronel_othon/Coronel_Othon_02.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero coronel-othon escola">
                   <div class="portfolio-box design">
-                    <img src="img/coronel_othon/Coronel_Othon_03.jpg" alt="Imagem não encontrada" class="img-responsive">
+                    <img src="img/coronel_othon/Coronel_Othon_03.JPG" alt="Imagem não encontrada" class="img-responsive">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6 padding-right-zero saturnino-brito escola">
